# SvelteSimpleAPI

./: .dockerignore  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml
kubernetes/: api-config.yaml  api-deployment.yaml  api-secret.yaml  api-service.yaml
pages/: admin.py  apps.py  models.py  urls.py  validators.py  views.py
pages/migrations/: 0001_initial.py  0002_button_classes.py  0003_alter_button_url.py  0004_component_page_pagecomponent_delete_button_and_more.py
sendfiles/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
simpleAPi/: asgi.py  settings.py  urls.py  wsgi.py
